# shampoo_bot

./: .env.example  .envrc  README.md  pyproject.toml
.github/workflows/: pythonqa.yml
infrastructure/app/: Dockerfile
src/shampoo_scraper/: const.py  exceptions.py  main.py  settings.py
src/shampoo_scraper/bot/: __init__.py  base.py  factory.py  telegram.py
src/shampoo_scraper/parsers/: __init__.py  base.py  camelia.py  eurovaistine.py  factory.py  gintarinevaistine.py
src/shampoo_scraper/url_builders/: __init__.py  base.py  camelia.py  eurovaistine.py  factory.py  gintarinevaistine.py
