[tool.poetry]
name = "shampoo-scraper"
version = "0.1.0"
description = ""
authors = ["Tomas Gilys <tomas.gilys@pm.me>"]
readme = "README.md"
packages = [{include = "shampoo_scraper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.35.0"
python-telegram-bot = "^20.3"
aiolimiter = "^1.1.0"
lxml = "^4.9.2"
pydantic = "^2.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88